--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "0.13.3",
     "spice-sass": "^0.7.11",
     "superagent": "1.3.0",
+    "superagent-jsonp": "0.0.6",
     "swig": "1.4.2"
   }
 }
