--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-express": "^0.3.5",
     "gulp-minify-css": "^1.2.1",
     "gulp-sass": "^2.1.0",
+    "mongoose": "^4.3.1",
     "q": "^1.4.1",
     "react": "0.13.3",
     "spice-sass": "^0.7.11",
