--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "babelify": "^6.1.2",
+    "flux": "^2.1.1",
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
     "gulp-express": "^0.3.5",
     "gulp-minify-css": "^1.2.1",
     "gulp-sass": "^2.1.0",
     "mongoose": "^4.3.1",
+    "object-assign": "^4.0.1",
     "q": "^1.4.1",
     "react": "0.13.3",
     "spice-sass": "^0.7.11",
